cabal-version:   3.8
name:            test-plutus-tx
version:         0.1.0.0
license:         NONE
author:          andrea@andreabedini.com
maintainer:      Andrea Bedini
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable test-plutus-tx
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
                    , plutus-core
                    , plutus-tx
                    , plutus-tx-plugin
                    , prettyprinter
    hs-source-dirs:   app
    default-language: Haskell2010
